# AverageVioProc

./: CMakeLists.txt  README.md  package.xml
_average_/_input_average_odom_/: odom_msckf_vio_comp_2020-04-01-01-11-26.csv  odom_msckf_vio_comp_2020-04-01-05-17-21.csv  odom_msckf_vio_comp_2020-04-01-09-23-31.csv  odom_msckf_vio_comp_2020-04-02-01-46-04.csv  odom_msckf_vio_comp_2020-04-02-05-52-19.csv  odom_msckf_vio_comp_2020-04-02-09-58-25.csv  odom_msckf_vio_comp_2020-04-02-14-04-36.csv  odom_msckf_vio_comp_2020-04-02-18-10-46.csv  odom_msckf_vio_comp_2020-04-02-22-16-57.csv  odom_msckf_vio_comp_2020-04-03-02-23-07.csv  odom_msckf_vio_comp_2020-05-02-22-49-57.csv  odom_msckf_vio_comp_2020-05-02-23-01-28.csv  odom_msckf_vio_comp_2020-05-02-23-12-58.csv  odom_msckf_vio_comp_2020-05-02-23-24-28.csv  odom_msckf_vio_comp_2020-05-02-23-35-57.csv  odom_msckf_vio_comp_2020-05-02-23-47-29.csv  odom_msckf_vio_comp_2020-05-02-23-58-57.csv  odom_msckf_vio_comp_2020-05-03-00-10-27.csv  odom_msckf_vio_comp_2020-05-03-00-21-57.csv  odom_msckf_vio_comp_2020-05-03-00-33-29.csv
launch/: average_output_mono.launch
src/: average_output_node.cpp
