<?xml version="1.0"?>
<package format="2">

  <name>AverageVioProc</name>
  <version>0.0.1</version>
  <description>AverageVioProc</description>

  <maintainer email="shijz16@mails.jlu.edu.cn"></maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>stdmsgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>stdmsgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>stdmsgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>rosbag</build_depend>
  <exec_depend>rosbag</exec_depend>

</package>
